# ChangeLog for dev-perl/AnyEvent
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/AnyEvent/ChangeLog,v 1.109 2013/01/07 20:16:36 ago Exp $

  07 Jan 2013; Agostino Sarubbo <ago@gentoo.org> AnyEvent-7.40.0.ebuild:
  Stable for amd64, wrt bug #415199

*AnyEvent-7.40.0 (18 Nov 2012)

  18 Nov 2012; Torsten Veller <tove@gentoo.org> +AnyEvent-7.40.0.ebuild:
  Version bump

*AnyEvent-7.20.0 (22 Aug 2012)

  22 Aug 2012; Torsten Veller <tove@gentoo.org> +AnyEvent-7.20.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  21 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> AnyEvent-6.100.0.ebuild:
  x86 stable wrt bug #416109

  19 May 2012; Agostino Sarubbo <ago@gentoo.org> AnyEvent-6.100.0.ebuild:
  Stable for AMD64, wrt bug #416109

*AnyEvent-7.10.0 (13 May 2012)

  13 May 2012; Torsten Veller <tove@gentoo.org> +AnyEvent-7.10.0.ebuild:
  Version bump

  01 Feb 2012; Torsten Veller <tove@gentoo.org> -AnyEvent-6.130.0.ebuild:
  Cleanup (#401813)

*AnyEvent-6.140.0 (01 Feb 2012)

  01 Feb 2012; Torsten Veller <tove@gentoo.org> +AnyEvent-6.140.0.ebuild:
  Version bump

*AnyEvent-6.130.0 (28 Jan 2012)

  28 Jan 2012; Torsten Veller <tove@gentoo.org> +AnyEvent-6.130.0.ebuild:
  Version bump. Drop dev-perl/Event dependency (#395573). Fix LICENSE. Change
  DESCRIPTION

*AnyEvent-6.100.0 (20 Oct 2011)

  20 Oct 2011; Torsten Veller <tove@gentoo.org> +AnyEvent-6.100.0.ebuild:
  Version bump

  11 Sep 2011; Raúl Porcel <armin76@gentoo.org> AnyEvent-5.2.5.1.ebuild,
  AnyEvent-6.20.0.ebuild:
  Add ~alpha/~ia64 wrt #382095

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -AnyEvent-5.340.0.ebuild:
  Cleanup

*AnyEvent-6.20.0 (02 Sep 2011)

  02 Sep 2011; Torsten Veller <tove@gentoo.org> +AnyEvent-6.20.0.ebuild:
  Version bump

  30 Jul 2011; Torsten Veller <tove@gentoo.org> -AnyEvent-5.310.ebuild:
  Cleanup

*AnyEvent-5.340.0 (12 May 2011)
