@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/AnyEvent/AnyEvent-7.40.0.ebuild,v 1.2 2013/01/07 20:16:36 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/AnyEvent/AnyEvent-7.40.0.ebuild,v 1.3 2013/01/11 19:06:48 blueness Exp $
 
 EAPI=4
 
@@ -11,7 +11,7 @@ inherit perl-module
 DESCRIPTION="Provides a uniform interface to various event loops"
 
 SLOT="0"
-KEYWORDS="~alpha amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-solaris"
+KEYWORDS="~alpha amd64 ~arm ~ia64 ppc ppc64 ~sparc ~x86 ~x86-solaris"
 IUSE=""
 
 SRC_TEST="do"
