@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST AnyEvent-5.251.tar.gz 216958 SHA256 a1fb5795e083bb2c74bf576b107b9e063880c843888867cf9712f5a9c0718f47 SHA512 7b3f393773a4f105c480467923a9152af0b491d8c423413de4940a98b4e122e5dc15f8e68b0ecb416260fb003fa2726617fc98fc074042f83671f12b815528ba WHIRLPOOL 60d06476168282fb3e3f6f4d09086d5351942f2e6ed039a9eebe2ead466d254ca56b92ed86bf27a3d413c76425117056958780263e38225994243f43fbbc00ce
 DIST AnyEvent-6.02.tar.gz 263305 SHA256 64d7d3c02144b350b97fe437919df0112b1da448a87fc6706e0d0c0e274ccd06 SHA512 6e8d736da721afbf3b21c5297d0e0e262c1cf5b0acb4474ca418bf28a014bbdab331d8b5e9b8c093b9a87d1fbcf1c2cd9974080a970db8e1a36c15a711590543 WHIRLPOOL 56e2b46cb4ef512a9b2e23c05753bcf149deeb676b4a6ad62aeb687beba9432134c6680f471fbeb05df4e2845a2ff41139b695d1a1d43453b7c385c22db07080
 DIST AnyEvent-6.1.tar.gz 269805 SHA256 6ba1f40ad1a9f5a809c6ff95969112b02c4b1d47f7e3a01c1ea6bff05ca72ad5 SHA512 b27c64534c0ad559b41cc4b68ba49c03cda5b128cf2e241d24082057c25ce41238e50671440881bc7ff4412512ba59e0956904d342a38ad125eeacc478ba20a4 WHIRLPOOL 83b2d46b5d151581476334e4fd519df41d9574fa8c4d8b3ae3f020f8051abeb3b4815883de95de1e68e1af8ce0eb7b996c78a5adc3034defbf3d412cb1abfe8a
@@ -11,6 +14,23 @@ EBUILD AnyEvent-6.140.0.ebuild 466 SHA256 ae4d20aeba307c612d55bf4e454630e7d558a1
 EBUILD AnyEvent-6.20.0.ebuild 511 SHA256 e16d9ed9c45cfb6a4f6113d4a4b517da7ac995d070f7b0dc8f8419791504705a SHA512 96140313d970adec04adc42abb803c0830d8406e489f215a6bdfb6c09cb52266ace89f99b5655e279f396b1ea88996249e52904d33910e6e6bf152e745ac4db3 WHIRLPOOL 4aeed697ab2b0e449af34c61185e2edf6866375d304a715edbc591f28c6b8fdf9b29c546133da2f01a4ca9977a5b5c696dd0577c7d4ba66384139680eb7526c7
 EBUILD AnyEvent-7.10.0.ebuild 465 SHA256 d838e80681903d70c429d9bd5bde44db028d9e217fa11d00e745cb90cda41d27 SHA512 293f6be3a50475c43cdce49d458bc7f66d97d6e21b1e02823afa0d3591bbd9cffccf6610c87e63cfca377c9e43da0c163b0ee46b4262f048ea488127ffed4d95 WHIRLPOOL 844f062c215299171a4856db2871d66c946b6cdec37c2703c7b8fd38520d940f02c6d5bdd74e18c18c992d3bb5c8a9d69867b27a63cea24d0eb3892249b9b547
 EBUILD AnyEvent-7.20.0.ebuild 465 SHA256 525313e15688710bd86323a504ddb160189fa55e749764a1583f24bf5f87e72a SHA512 fa9d66e82d36e5c21364e435115dc326926b42068ba6b2365ff4937fce1b3453f0fc7a3b84fb01bb7e0a8eff8129446188a8c56ecdd7d0c356a9034df81d4eeb WHIRLPOOL 065365a835065c554b3619719ec5ec36104adba4b3de676edc745e377568d3c10985c7455e4a0ca77418610c054ac8335aa680bd9ec5afe7432eea279578449c
-EBUILD AnyEvent-7.40.0.ebuild 463 SHA256 2bfc86aa012070196f466db2ebf6b7dd615c1f59edd9190194e1efec0a560383 SHA512 e9669cf73cc54e990835c340f9c4e14b2ec9e162f1894103a51e77c9f3e22fb1a71638eaf0f9fcbf5a579c3872426de382ed62c20e02b78563208536c98e83a5 WHIRLPOOL ec207e8e356f6ebf76c893a704c0abc4096804cacdf8a38a3d754bbad00ce223d7a3a4805c85cc110323a25df4bccb06127e49e934d7bd527f072d3ea628602b
-MISC ChangeLog 13255 SHA256 63aef9bb3d0f4740a5073db9de8af83e5d03d33c6c66078a6e46a4b1f6a3908f SHA512 9fdf17eacbb120e4c07f0b166cd257b53745ae1bb9fe3a0e933036b782e2cf26f8295a084be8dd1cb53825e244a6b677f4e6e19e5cdf182bf926fb5cacc8fb7f WHIRLPOOL fd2bf139232444abe55be04b215dfb5db47da14a103c5ab108e0d088b48e7af7f9284400982667779e7ba4aa5802d5e987d6de99b9486ad99c9a905eed839749
+EBUILD AnyEvent-7.40.0.ebuild 466 SHA256 a70110477fcb5cf4489673947aa5958c001fdbc1d46c40f270a1671ce191663c SHA512 2ac448a17bf543cea9bc4984ca41826eddfcd769a0c31849689be72790a0af2d79d07ee590162a7460ae101ea0437581b17c7dfe7b92c692f88091bccdb35926 WHIRLPOOL 7513847e6b368de92d30f7b950d1374efc2b77382e586e8fe38d206000e3ce1a1173dd853ee6d13335f1194f9b9785dbd0600e87c5daa3649324acf5bae4c2b9
+MISC ChangeLog 13388 SHA256 96f7e691fc89c57e08f846f4f8cc12aa86cbc635b4fe0cf01e3571262811f408 SHA512 b6b3e6d63c94dccca583a741f389f90609ff51df419a187f490399ff05da32e231d632a22846aec90b6cf3df24844e9f1f2786113fcfc3f72483230bb4184df5 WHIRLPOOL 50f9f022e11b499c4d60293c70817deea70d6123c9dbe16f6e0e6f5789edf114fd4d6188a353be3d3a2c281eb84819b30835ce0387e26560c2fe19be175cd0c0
 MISC metadata.xml 3005 SHA256 c6ae07fb90cd5d3a1fe5bf972c74b879a3fb27846cb5c4e0a4e746166849d87c SHA512 8120f34b0e2eed9d285c5691b7ad4d162d93aa1af0cc21b61da3681046b6fb16797196b545fd55009e063c67c7867abab89fc9c3e59c2acd75d9a21a26fd1592 WHIRLPOOL df8072f43cd20229f6c49c80bb226a7e217077b5e182ab39c843b68395b69f3b6a16a4e9d25cf5f62f24c8336205f40be00649a0a69aefdbd90e7be9c1160c15
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQ8GLUAAoJEJOE+m71LUu6UfsQAIpV3RDfzyKTMSfMh94ZO1zg
+97yovxNopNQvkAs9kOReaQ/sPBvgnf4Hhyfkd1HzjvoY/HREneAllDCZ9oDyjuQy
+vByE8mF+Qx/+Cyzqdj7ZjLl2IIU130eD9mAaTEvBzlxBIs9v1/wKCSQU6+44cF8I
+wVvieTVt6YIbFCko9Mzm/1n6n/gEhHnodUtlrRclt7AbfKYpK8kLrjUf8Iznu2M6
+heVZyA9uxJYA9GzJozd4WboxJA8KXU5e3jPZ+JATDc1iDVMTr3s4abn3Fl3XZ30H
+yXhO20Zv8AfxiXsD++zXC1m01YcXwg/BJ51pCc9Cp02Tr9UOJb3+SF56/Rd4b1mY
+28xbjQVshX025l+rwwMjJPJyCN5aHfSRvhtNChjQq7VpTpT/cIOEETSTHqc9Hib3
+B64MWYKAm6hEnVr8Pv2uWma/N9VeorP3aNB0h5jC/AvmQ4NVexe7z45ZSNLJmptT
+Gi9586PqORxMQPbbXwF/DQ7Q5ugD36mHCCN62T2pZsrtsyaaLSNHCsGobtaNCInY
+iirJDiRRONmpjK5y6cxVcByIXHFoXkDzjNmddMjzzZ9d5j1AR0kffigjwAcwpYw2
++1yw3eNfJIdOyRmksOq2R3sgevg6W9ZI4dzRXXLiONrHsbOaUjTTUqKHX0Dt5J+o
+OUJ3YIkrBPkEyXApGvvQ
+=rLVI
+-----END PGP SIGNATURE-----
