@@ -1,5 +1,25 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST whois-5.5.2.tgz 50008 SHA256 8ccc9107d8c0d348ddc250597ea0b5f4122076bcce5e8ef2bc32e87f77f5fc8d SHA512 ee6c1fa183fa009a6e47ec0c51815a215f29e24bd443683a2df8f02bca822cb91c5fb91148aaea37c5d9c993e2c7ad39d310c7cd9358ea6a7fa88ec2c8aaba16 WHIRLPOOL 737745a9309da3968d2f897a3fe878471624c1fb6386d7700699afb2b755f01f69e4ed09445f602203a48bcc4c3ea5c4cfbe79d64d051904e94b7ad245bf3774
-EBUILD bwwhois-5.5.2-r1.ebuild 956 SHA256 02f0bc8ea4c1ff83af3c4af32cefd42c288baa71ace0437599f86593b2b8d1f8 SHA512 8ffb6f3d3d034be41f9e8dd5c8b32b744cda4b4ddda02c9224b5a449a8354e918e116079923b60c811dfdfb2e84b761cfc1a5a5f7b59f5d74c6c3f997ad624b5 WHIRLPOOL a3c3abe3aedb9e79c0e90c74e3c7b06471995ce76bb2ee583a6e73a0426078fad8ed46d941aaa2a32cd1a1d861a7d1bb2dd9cbb6930485eafcaf9ee574ebbb88
+EBUILD bwwhois-5.5.2-r1.ebuild 955 SHA256 7bc29734031a4af7ac0a3adea682fa696e99dbeec626099ff56c5c155670f4d9 SHA512 3ea90157cbbc9a5ff7030a23bf66ef996486b2c6fbf765f0e0c731b8d6eadc0dca2de80110a7c3990cb18b5bb92ca9a0f63b096b7e7f31dfab2c3495a4d9d32c WHIRLPOOL ab41bb80afbd315cd44cf6f8bca4ff7aff6057ca8bf4c91853ef961480f2ce2c4705242a0309f9e30d48333b23b1f249269896081d1695fc9520ba2378436f74
 EBUILD bwwhois-5.5.2.ebuild 796 SHA256 80d4650e8f3e220b80f0307cdefef306ee15757a2c602b9a225e483077c86c72 SHA512 5329b4c3a5eab610094dee92ecb498c98eaca0b4bc060391240f5c5ab84b3b2dd4befec8bfe8538552f114cee309708eb76ae7a0d144ff3104b0e3a458ccd431 WHIRLPOOL 66815bd3bc22c8ee10e2b30c6a3cbfdb617a433ad583160fa28e2439f28b22dfeb07ba799c5cb0f25ff7386bb94785dea6c42c99a6d1836a5c41392aa1b9236a
-MISC ChangeLog 3976 SHA256 c7e6b01413953cb1e2b927e4177bc1d1ee71ede7cc07c659a63cad5d33c23011 SHA512 48c17bf9e6eddf0b50c4404ce82b48d67ef321074987cc29e028e2ca2dec66c64bf1a092efa982f66394b173c65c7dbb376f7f5acecb2dd5c34efba0712d708c WHIRLPOOL d44fc488267f52fd3c89341550e96599e0e1b1b9348a0582b85f8b9c269737d4e5bc29714c3b40bba4e0653ead2d15c39187a9c124080107f3759630782df6e0
+MISC ChangeLog 4099 SHA256 5de9f5005fe9e1f4ef2c77d2252fe56f6ea976490dae8975ba074d3d72cedb52 SHA512 7a086268da706a752b643a35d1d8a16ee29bc6fcea54084d38fcdbdd1c9564872ccb370ba3c1e366e30be48b7cece42e7933d7b7b377e611687239cd3d5acc5c WHIRLPOOL 2fc81566463a78f8204067a9134277a6638cfd377e98c02417d4215838f0627e0c546e7d6c631108671bddb71e0f889cd0a5710766a901afaf09b4f917626d63
 MISC metadata.xml 484 SHA256 4ae41dfff8744a8595b4d69e801e678a5473482be89dc6c725527398c1bc0541 SHA512 cfc6b57ebb2e7bc349f6fc8ff3c1e19db1ad6c96058ce017c7e2d4ba0d7297d7b6eb7fe4a9ed81335edbfac8655c15cbd03d268d865c70083f8cf50a15726c00 WHIRLPOOL 4c34d116e6240803e3f84cb840b04606de2e92d31d3febdfe00b0c7a7f54647766be601981f072462b7ca5a47a818ca1ccc189b589a906efd082a744c17f5cc7
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQ8GF9AAoJEJOE+m71LUu6gKcQAKKD12fHBnMbwc6bRD3F3P/Q
+sGxLJe1FL4ZeABB+R86Ij+51daJitJW9DTRi+NlrRkB3ZXrZ27Swd3Q8Jamu3+nY
+0izh47Kzx2hFLa5qyBVy3440tiDANRcuqd98EoOqHdjdFInu4Qgm6G0/6GtG0ZOU
+FXDStfmpljWyo/Px22Wkbqr64k5RFrhpQSMm33/a/pCDwy8Wuo4wH6IhwalQwrfS
+yfNvpqPBzfE+vnZmSt7KTyHU0Q9BX6RcrOI8Bf5vkhVBwtDMOhFtAKVo9ZgkTc4P
+q2Djh2UeHFBNybEutUSh1FFH98X9jKx62ZnwcI2LVeX+qXfqNwvpJBc/FZzY0rDH
+7Ceh5Mo6lI9KMQf0Q1S8JN6vINkzEelOOuk53l9xNKOPd77Z0n4SPL0xXv0DEe8Y
+8BGOvWVIMQwh81IlfBbhMhNlOm6VcJdXeizUanKWI0iRnZpg1ALrC6VPbuwx/Ji1
+aB/ujJoxlZ3WhyEyuSxugsY08kbDDnYt1M603sM929OVjrWeh87iBHykWQ79IOvr
+ZSLmGvejpFvS0zAOHyUzKPGcxAZRrFbBgzLF9LKYlIGEnko/sjCTwMal9jK2ZqNn
+Es4emvxnaMVRIEuiV0YVgECkmarX+qcELEKpCV4D5N/dytzT/N6L2jvgHiy9nZzp
+iJkMziLonxs+mI9j0ZBL
+=zVTz
+-----END PGP SIGNATURE-----
