@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/bwwhois
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/bwwhois/ChangeLog,v 1.34 2013/01/11 09:16:28 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/bwwhois/ChangeLog,v 1.35 2013/01/11 19:01:05 blueness Exp $
+
+  11 Jan 2013; Anthony G. Basile <blueness@gentoo.org> bwwhois-5.5.2-r1.ebuild:
+  stable ppc, bug #451036, thanks vincent
 
   11 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> bwwhois-5.5.2-r1.ebuild:
   Install docs, thanks to Mikle Kolyada
